# experimental-wsd

./: .gitignore  Makefile  README.md  old_README.md  pyproject.toml  usas_mapper.yaml
.devcontainer/: Dockerfile  devcontainer.json
data/: download_data.sh  download_english_usas_moasaico.py  download_usas_data.sh  usas_mapper.yaml
evaluation_runs/: evaluate_macro_f1.py  evaluate_micro_f1.py  token_word_sense_prediction.py
notebooks/: content_word_prediction.ipynb  explore_logs.ipynb  wsd_task.ipynb  wsl_task.ipynb
notebooks/evaluation_dataset_visulisations/: all_results.tex  evaluation_dataset_general_statistics.tex  usas_evaluation_data.ipynb
scripts/: process_zh.py  translate_usas_mapper.py
slurm_runs/semantic_similarity/usas_variable_negatives/: jhu_clsp_ettin_17m.sh  jhu_clsp_ettin_68m.sh  jhu_clsp_mmBERT_base.sh  jhu_clsp_mmBERT_small.sh  xlmr_base.sh
slurm_runs/semantic_similarity/variable_negatives/: deberta.sh  deberta_v3_base.sh  test_lr_batch_size.sh
src/experimental_wsd/: config.py  data_processing_utils.py  pos_constants.py  training_utils.py  wordnet_utils.py  wsd.py  wsl.py
src/experimental_wsd/data_processing/: processed_usas_utils.py  shared_token_utils.py  text_with_variable_token_negatives.py  token_static_token_negatives.py  token_variable_token_negatives.py
src/experimental_wsd/evaluation/: similarity_utils.py  token_similarity_variable_negatives.py  usas_datasets.py  usas_metrics.py
src/experimental_wsd/nn/: scalar_mix.py  token_classifier.py  token_similarity.py  utils.py
statistics_and_visualisations/: general_dataset_statistics.tex
tests/: test_config.py  test_data_processing_utils.py  test_pos_constants.py  test_training_utils.py  test_wordnet_utils.py  test_wsd.py
tests/data_processing/: test_shared_token_utils.py
tests/nn/: test_token_similarity.py
training_runs/: content_word_prediction.py  token_word_sense_prediction.py
training_runs/semantic_similarity/: get_token_similarity_variables_negatives_lr_batch_sizes.py  train_and_evaluate_token_similarity_variables_negatives.py
training_runs/semantic_similarity/variable_negatives_configs/: base_config.yaml  deberta_v3_base.yaml  jhu_clsp_ettin_encoder_17m.yaml
training_runs/usas_semantic_similarity/: evaluate.py  pre_process_dataset.py  train_and_evaluate_token_similarity_variables_negatives.py  visualise_training_data.py
training_runs/usas_semantic_similarity/variable_negatives_configs/: base_config.yaml  jhu_clsp_ettin_encoder_17m.yaml  jhu_clsp_ettin_encoder_68m.yaml  jhu_clsp_mmBERT_base.yaml  jhu_clsp_mmBERT_small.yaml  xlmr_base.yaml
(+2 files in other folders)
