[project]
name = "experimental-wsd"
version = "0.1.0"
description = "Repository for experimenting with Word Sense Disambiguation methods."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "datasets>=3.6.0",
    "notebook>=7.4.3",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typer>=0.16.0",
    "wn>0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
project-includes = ["**/src/**/*.py", "**/tests/**/*.py"]
project-excludes = ["**/*venv/**/*"]

[tool.ruff]
include = ["**/src/**/*.py", "**/tests/**/*.py", "**/pyproject.toml"]

[dependency-groups]
dev = [
    "pyrefly>=0.24.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
